fix alignment in Drawer header

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -61,6 +61,11 @@
   padding: 0 !important;
 }
 
+/* align header of Drawer with header of page */
+.menu_drawer .ant-drawer-header {
+  padding: 14px 24px !important;
+}
+
 @media (max-width: 767px) {
   .menu__mobile-button {
     display: inline-block !important;
